its almost 7am and ive just spent 2 hours writing a json file, im taking a break before i headbutt my fucking keyboard

--- a/.env.example
+++ b/.env.example
@@ -5,16 +5,16 @@
 DISCORD_GUILD_ID = 960606557622657026 # Keep this as the dev server
 DISCORD_OWNER_ID = 1234 # Your discord ID
 DISCORD_CLIENT_ID = 1234 # In your Discord Developer Portal
-DISCORD_CLIENT_TOKEN = abc123 # In your Discord Developer Portal
-PRISMA_DB_URL = postgres://tripsit:SuperSecure123@tripbot_database:5432/tripsit
-POSTGRES_DB_URL = postgres://tripsit:SuperSecure123@tripbot_database:5432/tripsit
+DISCORD_CLIENT_TOKEN = "abc123" # In your Discord Developer Portal
+PRISMA_DB_URL = "postgres://tripsit:SuperSecure123@tripbot_database:5432/tripsit"
+POSTGRES_DB_URL = "postgres://tripsit:SuperSecure123@tripbot_database:5432/tripsit"
 
 # REQUIRED Database password
 # This should be the same as the PRISMA_DB_URL and POSTGRS_DB_URL passwords
-POSTGRESQL_PASSWORD = SuperSecure123
+POSTGRESQL_PASSWORD = "SuperSecure123"
 
 # Keep as development
-NODE_ENV = development
+NODE_ENV = "development"
 
 # Feel free to change
 TZ = "America/Chicago"
@@ -25,32 +25,31 @@ COMPOSE_PROJECT_NAME = 'tripbot'
 #### Everything after this is OPTIONAL ####
 
 # Domains
-DNS_DOMAIN = tripsit.io
+DNS_DOMAIN = "tripsit.io"
 
 # PG Admin
-PGADMIN_PASSWORD = SuperSecure123
+PGADMIN_PASSWORD = "SuperSecure123"
 
 # Discord OAuth
-DISCORD_CLIENT_SECRET = <Optional>
-DISCORD_CLIENT_REDIRECT_URI = <Optional>
+DISCORD_CLIENT_SECRET = "<Optional>"
+DISCORD_CLIENT_REDIRECT_URI = "<Optional>"
 
 # Matrix bot 
-MATRIX_ACCESS_TOKEN = <Optional>
+MATRIX_ACCESS_TOKEN = "<Optional>"
 
 # Telegram bot
-TELEGRAM_TOKEN = <Optional>
+TELEGRAM_TOKEN = "<Optional>"
 
 # OpenAI
-OPENAI_API_ORG = <Optional>
-OPENAI_API_KEY = <Optional>
+OPENAI_API_ORG = "<Optional>"
+OPENAI_API_KEY = "<Optional>"
 
 # Other API Tokens
-MOODLE_TOKEN = <Optional> # For Moodle API
-GITHUB_TOKEN = <Optional> # For GitHub API
-RAPID_TOKEN  <Optional> # For RapidAPI
-WOLFRAM_TOKEN = <Optional> # For WolframAlpha API
-IMGUR_ID = <Optional> # For Imgur API
-IMGUR_SECRET = <Optional> # For Imgur API
-YOUTUBE_TOKEN = <Optional> # For YouTube API
-IMDB_TOKEN = <Optional> # For IMDB API
-```
+MOODLE_TOKEN = "<Optional>" # For Moodle API
+GITHUB_TOKEN = "<Optional>" # For GitHub API
+RAPID_TOKEN = "<Optional>" # For RapidAPI
+WOLFRAM_TOKEN = "<Optional>" # For WolframAlpha API
+IMGUR_ID = "<Optional>" # For Imgur API
+IMGUR_SECRET = "<Optional>" # For Imgur API
+YOUTUBE_TOKEN = "<Optional>" # For YouTube API
+IMDB_TOKEN = "<Optional>" # For IMDB API
